[metadata]
name = wdd_util
author = Wardopdem
author_email = wardopdem@gmail.com
version = attr: wdd.util.VERSION
description = "Creating windows executable  that calling python interpretter from Pyton's script."
long_description = file:README.md
license = BSD 3-Clause License
url = https://github.com/wardopdem/wdd_loging
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
namespace_packages = wdd
packages = find:
include_package_data = true
python_requires = >=3.6
